# goat

./: .gitignore  CLAUDE.md  changelog.md  go.mod  go.sum
cmd/eval/: main.go  mcp_test.go  multiturn_test.go  skills_e2e_test.go  skills_integration_test.go
cmd/example/: main.go
dev/: .env.example  docker-compose.yml  init-db.sh  litellm-config-modal.yaml  litellm-config.yaml
docs/diagrams/: 00-architecture-overview.md  01-agent-loop.md  02-llm-client.md  03-tool-system.md  04-permission-system.md  05-hook-system.md  06-prompt-assembly.md  07-context-compaction.md  08-subagent-manager.md  09-session-persistence.md  10-mcp-client.md  11-agent-teams.md  12-transport-layer.md  13-sdk-types.md  14-end-to-end-request.md  15-provider-setup.md  16-skill-evaluation.md  README.md
docs/evals/: README.md  benchmark-results.md
docs/quickstart/: README.md
eval/: benchmark_skills.json
eval/mcp_configs/: filesystem.json
evals/: Dockerfile  compose.yaml  goat_solver.py  humaneval.py  pyproject.toml  run_cross_model.sh  swe_bench.py  terminal_bench.py
pkg/agent/: agent.go  config.go  defaults.go  emit.go  interfaces.go  loop.go  loop_test.go  messages.go  prune.go  prune_test.go  query.go  session_memory.go  session_memory_test.go  slash.go  slash_test.go  (+5 more)
scripts/: Dockerfile.langfuse  README.md  benchmark_smoke.json  build_eval.sh  example_batch.json  langfuse_sync_local.sh  modal_gpt_oss.py  modal_results.py  modal_sandbox.py  modal_services.py  modal_setup.py  modal_vllm.py  model_registry.py  run_cross_model_modal.sh  test_modal_infra.sh  verify_langfuse_traces.py
(+419 files in other folders)
