[project]
name = "goat-evals"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3",
    "inspect-evals",
    "inspect-cyber",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["goat_solver.py", "humaneval.py", "terminal_bench.py", "swe_bench.py"]
